<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5228FD7"
    android:padding="10dp"
    tools:context=".EventDetails">

    <TextView
        android:layout_alignParentTop="true"
        android:id="@+id/eventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/event_1"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_below="@+id/eventName"
        android:id="@+id/eventImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/event_image"
        android:padding="10dp"
        android:scaleType="centerCrop"
         />

    <ScrollView
        android:layout_above="@+id/linearLay"
        android:layout_below="@id/eventImage"
        android:id="@+id/scrollableText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventImage">

        <TextView

            android:id="@+id/eventTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/textV"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLay"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="2.5"
        app:layout_constraintBottom_toBottomOf="parent">



        <Button
            android:id="@+id/registerBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:text="@string/register"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/discussBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:text="@string/discuss"
            android:textStyle="bold"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</RelativeLayout>